syntax = "proto3";

package internal;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service Master {
    rpc Join (JoinRequest) returns (JoinResponse) {}
    rpc StreamRule (Rule) returns (stream Rule) {}
    rpc GetListRule (FetchRequest) returns (ListRules);
}

message JoinRequest {
    string token = 1;

    message Minion {
        string PrivateAddr = 1;
        string PublicAddr = 2;
    }

    Minion minion = 2;
}

message JoinResponse {
    string uuid = 1;
    string message = 2;
}

message FetchRequest{
    int64 num=1;
    string cursor =2;
}

message Rule {
    string uuid = 1;

    google.protobuf.Struct extra = 2;
    google.protobuf.Timestamp UpdatedAt=3;
    google.protobuf.Timestamp CreatedAt=4;
}

message ListRules {
    repeated Rule Rules = 1;
    string Cursor = 2;
}